<resources>
    <string name="app_name">IberiComics</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="shuffleText">Shuffle</string>
    <string name="usersText">Usuario</string>
    <string name="homeText">Home</string>
    <string name="cerrar_sesionText">Cerrar sesión</string>
    <string name="Returnbtn">Return</string>
    <string name="usuario">Usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="contrase_a_actual">Contraseña actual</string>
    <string name="nueva_contrase_a">Nueva contraseña</string>
    <string name="confirmar_nueva_contrase_a">Confirmar nueva contraseña</string>
    <string name="cambiar_contrase_a">Cambiar contraseña</string>
    <string name="a_adir_a_favoritos">Añadir a favoritos</string>
    <string name="volver">Volver</string>
    <string name="siguientes">Siguientes</string>
    <string name="capitulos">Capitulos</string>
    <string name="anterior">Anterior</string>
    <string name="nombre_completo">Nombre completo</string>
    <string name="correo_electr_nico">Correo electrónico</string>
    <string name="nombre_de_usuario">Nombre de usuario</string>
    <string name="registrarse">Registrarse</string>
</resources>